# ailab

./: .gitignore  =2.4.0  LICENSE  QUICKSTART.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release-ppa.yml
ai_dev_box/: cli.py  container.py
ai_dev_box/installers/: __init__.py  nullclaw.py  openclaw.py  picoclaw.py
ai_dev_box/scripts/: setup_nullclaw.sh  setup_openclaw.js  setup_picoclaw.py
ailab/: __init__.py  cli.py  cloud.py  container.py
ailab/installers/: __init__.py  nullclaw.py  openclaw.py  picoclaw.py
ailab/scripts/: container_init.sh  setup_nullclaw.sh  setup_openclaw.js  setup_picoclaw.py
ailab/web/: app.py
debian/: README.Debian  ailab-web.service  ailab.1  ailab.bash-completion  ailab.install  ailab.manpages  ailab.postinst  ailab.preinst  changelog  control  copyright  rules
debian/source/: options
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChangeModelModal.tsx  ContainerList.tsx  CreateModal.tsx  InstallModal.tsx  LogStream.tsx  PortManager.tsx  Terminal.tsx
snap/: snapcraft.yaml
snap/hooks/: configure
snap/local/: ailab-web-wrapper
specs/: cloud.md
