[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ailab"
version = "0.0.2"
description = "LXD-based sandboxes for running AI tools safely on Ubuntu"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
keywords = ["lxd", "ai", "sandbox", "ollama", "lemonade", "openclaw"]

[project.scripts]
ailab = "ailab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ailab*"]

[tool.setuptools.package-data]
"ailab.scripts" = ["*.sh", "*.js", "*.py"]
